correcting notification style in tasks to be more visible

--- a/static/css/task_style.css
+++ b/static/css/task_style.css
@@ -184,6 +184,4 @@ html,body{
 
 .comment h6 {
     word-wrap: break-word;
-    max-height: 30px;
-    overflow-y: auto;
 }
